# rdma_demo

./: .gitignore  CMakeLists.txt
include/: rdma_connect.h  rdma_helper.h  rdma_poll.h  rdma_poll.hpp  rdma_resource.h
src/option/: opt  opt.c
src/rdma_c/: client.c  server.c
src/rdma_cc/: client.cc  server.cc
